12.01.2020
    - Oops. Reinstall missing darkgreendot.xpm (Tim)
    - Fix compile error when RtAudio headers not found.
09.01.2020
    - Fix rubberband compile error + pull trackheader size fixes from kybos. (Tim)
01.01.2020
    * NEW - Audio live! time-stretch and samplerate-stretch conversion : (Tim)
      Merge from audio-convert branch. Many changes and fixes along the way.
    - Wave editor has two new tool buttons which place two new types of markers
       on the canvas. Move the markers around to affect the sound. Click on a
       marker to select it. Press Del to delete the marker.
    - Wave module moved into separate library with no external dependencies.
    - New MuseFrame_t MuseCount_t types.
16.12.2019
    - Exposed new colours for stylesheets. See Ardour and Dark qss files. (Tim)
    - Fixed #740: sf3 files crash. libinstpatch code: We did not check returned pointers.
14.12.2019
    * NEW - Audio effects rack size increased from 4 to 8 : (Tim)
    - New right-click context menu entry on strip labels: "effects rack visible items".
13.12.2019
  - HOT Bug fix: Missing 3 MESS synths, undefined symbol MusEGlobal::config (Tim)
    Cause: #include "gconfig.h" in icons.cpp brought in core globals which should
     not be in these synth plugin libraries (or in icons module). Removed the line
     and instead passed the desired global value to initIcons().
    That said, the plugins really should be stand alone and not use the icons module
     until the icons module becomes a true shared resource library. (Currently it
     is initialized by core, so not quite self sufficient yet.) So... I copied the
     required icons to the relevant synths, decoupling them from the icons module.
    By using icons directly from qrc instead of icons module, I was also able to
     remove the icons module from inclusion in widgets module (yay!), removing
     a further dependency of simpledrums synth which was missing too.